# deco

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  hyprpm.toml
src/: config.cpp  config.hpp  defines.hpp.in  events.cpp  events.hpp  include.hpp  input.hpp  log.hpp  main.cpp  plugin.cpp  plugin.hpp
src/bar/: bar-IHyprWindowDecoration.cpp  bar.cpp  bar.hpp  barimpl.cpp  buttonmanager.cpp  buttonmanager.hpp  drawpass.cpp  drawpass.hpp  factory.cpp  positioner.cpp  positioner.hpp
src/config/: config.hpp  helpers.hpp  keywords.cpp  values.cpp
src/models/: bar.cpp  bar.hpp  button.cpp  button.hpp
src/widgets/: button.cpp  button.hpp  container.hpp
